Bug 174114 - desktop order in keyboard shortcuts wrong (in system settings)
Summary: desktop order in keyboard shortcuts wrong (in system settings)
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-11-02 17:33 UTC by lenooh
Modified: 2008-11-02 23:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description lenooh 2008-11-02 17:33:11 UTC
Version:            (using KDE 4.1.2)
Compiler:           distributed with kubuntu 8.10
OS:                Linux
Installed from:    Ubuntu Packages

The order in which the desktops appear under the keyboard shortcuts menu is not naturally sorted (1,2,3,4,..) but machine-like (1,10,11,12,...2,20,3,...). This bug came with kde 4.x, it is not present in previous versions.

Here is a screenshot:
http://193.2.97.30/desktop_order.png
Comment 1 Pino Toscano 2008-11-02 20:54:43 UTC
SVN commit 879240 by pino:

Compare the items in a shortcut list in a "natural" way.

BUG: 174114


 M  +1 -0      kshortcutsdialog_p.h  
 M  +8 -0      kshortcutseditoritem.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=879240
Comment 2 Pino Toscano 2008-11-02 23:03:20 UTC
SVN commit 879286 by pino:

Backport:
Compare the items in a shortcut list in a "natural" way.

CCBUG: 174114


 M  +1 -0      kshortcutsdialog_p.h  
 M  +8 -0      kshortcutseditoritem.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=879286