Compare the items in a shortcut list in a "natural" way.

BUG: 174114

svn path=/trunk/KDE/kdelibs/; revision=879240